# ImBestCoder2020

./: .gitignore  ERDiagram.vuerd.json  README.md  main.py  main_hsu.py  pyproject.toml  requirements.txt  utils.py
data/: csv2sql.py
metadata/: tables.py
output/: demo.csv
